--- a/cluster-country-data.ipynb
+++ b/cluster-country-data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 7,
    "id": "0319ba9c-1910-4533-84b2-618fbffcfd4a",
    "metadata": {},
    "outputs": [
@@ -220,7 +220,7 @@
        "[167 rows x 9 columns]"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,18 +230,67 @@
     "import numpy as np\n",
     "import random\n",
     "from math import sqrt\n",
+    "from sklearn import preprocessing\n",
+    "\n",
+    "scaler = preprocessing.StandardScaler()\n",
     "\n",
     "# get data\n",
     "PATH = './data/Country-data.csv'\n",
     "\n",
-    "data = pd.read_csv(PATH)\n",
-    "data = data.set_index(\"country\")\n",
-    "data"
+    "data_df = pd.read_csv(PATH)\n",
+    "data_df = data_df.set_index(\"country\")\n",
+    "data_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 8,
+   "id": "67e7c4b7-f007-4957-be86-4d8b20ae1178",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not Normalized \n",
+      " [[9.02e+01 1.00e+01 7.58e+00 ... 5.62e+01 5.82e+00 5.53e+02]\n",
+      " [1.66e+01 2.80e+01 6.55e+00 ... 7.63e+01 1.65e+00 4.09e+03]\n",
+      " [2.73e+01 3.84e+01 4.17e+00 ... 7.65e+01 2.89e+00 4.46e+03]\n",
+      " ...\n",
+      " [2.33e+01 7.20e+01 6.84e+00 ... 7.31e+01 1.95e+00 1.31e+03]\n",
+      " [5.63e+01 3.00e+01 5.18e+00 ... 6.75e+01 4.67e+00 1.31e+03]\n",
+      " [8.31e+01 3.70e+01 5.89e+00 ... 5.20e+01 5.40e+00 1.46e+03]]\n",
+      "Normalized \n",
+      " [[ 1.29153238 -1.13827979  0.27908825 ... -1.61909203  1.90288227\n",
+      "  -0.67917961]\n",
+      " [-0.5389489  -0.47965843 -0.09701618 ...  0.64786643 -0.85997281\n",
+      "  -0.48562324]\n",
+      " [-0.27283273 -0.09912164 -0.96607302 ...  0.67042323 -0.0384044\n",
+      "  -0.46537561]\n",
+      " ...\n",
+      " [-0.37231541  1.13030491  0.0088773  ...  0.28695762 -0.66120626\n",
+      "  -0.63775406]\n",
+      " [ 0.44841668 -0.40647827 -0.59727159 ... -0.34463279  1.14094382\n",
+      "  -0.63775406]\n",
+      " [ 1.11495062 -0.15034774 -0.33801514 ... -2.09278484  1.6246091\n",
+      "  -0.62954556]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Normalize data\n",
+    "data_matrix = data_df.to_numpy()\n",
+    "print('Not Normalized \\n', data_matrix)\n",
+    "#print(data_matrix[:, 0].sum()/167)\n",
+    "#print(data_matrix[:, 0].std())\n",
+    "\n",
+    "data = scaler.fit_transform(data_matrix)\n",
+    "print('Normalized \\n', data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "fae3666d-13db-4f01-a4e6-c69f99a228ff",
    "metadata": {},
    "outputs": [],
@@ -261,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 10,
    "id": "a621388f-d14c-4d5e-8b08-d9318e682647",
    "metadata": {},
    "outputs": [
@@ -269,21 +318,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cost at iteration 0: 673374409.7020997\n",
-      "Cost at iteration 1: 360040624.70608985\n",
-      "Cost at iteration 2: 262101731.0497315\n",
-      "Cost at iteration 3: 224014949.92537346\n",
-      "Cost at iteration 4: 221992873.27311474\n",
-      "Cost at iteration 5: 220734634.79915634\n",
-      "Cost at iteration 6: 219441731.4927854\n",
-      "Cost at iteration 7: 218732861.88216826\n",
-      "Cost at iteration 8: 218732861.88216826\n",
-      "Cost at iteration 9: 218732861.88216826\n",
-      "Cost at iteration 10: 218732861.88216826\n",
-      "Cost at iteration 11: 218732861.88216826\n",
-      "Cost at iteration 12: 218732861.88216826\n",
-      "Cost at iteration 13: 218732861.88216826\n",
-      "Cost at iteration 14: 218732861.88216826\n"
+      "Cost at iteration 0: 11.926164245385014\n",
+      "Cost at iteration 1: 7.3379127205344705\n",
+      "Cost at iteration 2: 6.666848767416856\n",
+      "Cost at iteration 3: 6.465516347082324\n",
+      "Cost at iteration 4: 6.394691174309832\n",
+      "Cost at iteration 5: 6.377320782924625\n",
+      "Cost at iteration 6: 6.372385083772199\n",
+      "Cost at iteration 7: 6.370752533849225\n",
+      "Cost at iteration 8: 6.369095058958783\n",
+      "Cost at iteration 9: 6.368159042196286\n",
+      "Cost at iteration 10: 6.368159042196286\n",
+      "Cost at iteration 11: 6.368159042196286\n",
+      "Cost at iteration 12: 6.368159042196286\n",
+      "Cost at iteration 13: 6.368159042196286\n",
+      "Cost at iteration 14: 6.368159042196286\n"
      ]
     }
    ],
@@ -294,16 +343,14 @@
     "\n",
     "# Pick 2 random samples to be our centroids\n",
     "# note u_k is centroid k \n",
-    "u1 = data.loc[random.choice(data.index)].to_numpy()\n",
-    "u2 = data.loc[random.choice(data.index)].to_numpy()\n",
+    "u1 = data[random.choice(range(len(data)))]\n",
+    "u2 = data[random.choice(range(len(data)))]\n",
     "\n",
     "u = [u1, u2]\n",
     "\n",
-    "x = []\n",
-    "for ind, row in data.iterrows():\n",
-    "    x.append(row.to_numpy())\n",
+    "x = data.copy()\n",
     "\n",
-    "# K means\n",
+    "# K means   \n",
     "for i in range(15):\n",
     "    distances = [[],[]]\n",
     "    # for now we use euclidean distance\n",
@@ -336,8 +383,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "e0ad43f1-eff7-4c28-a46b-a0cf77eae617",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 0, 0, 1, 0, 0, 1, 1, 0, 1, 1, 0, 1, 1, 1, 0, 0, 0, 0, 1, 0, 1, 1, 1, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0, 0, 0, 1, 0, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 1, 0, 1, 1, 0, 0, 1, 1, 0, 1, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 1, 1, 1, 0, 1, 0, 0, 0, 0, 1, 0, 0, 1, 1, 0, 0, 1, 1, 1, 1, 0, 0, 1, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 0, 0, 0, 0, 1, 1, 0, 0, 1, 1, 0, 1, 0, 0, 0, 1, 1, 1, 1, 0, 0, 0, 1, 0, 1, 1, 0, 1, 1, 1, 0, 0, 1, 1, 0, 0, 0, 0, 1, 1, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 1, 0, 0]\n",
+      "In cluster 0:\n",
+      "Afghanistan, Algeria, Angola, Argentina, Armenia, Azerbaijan, Bangladesh, Belize, Benin, Bhutan, Bolivia, Botswana, Burkina Faso, Burundi, Cambodia, Cameroon, Cape Verde, Central African Republic, Chad, China, Comoros, Congo, Dem. Rep., Congo, Rep., Cote d'Ivoire, Dominican Republic, Ecuador, Egypt, El Salvador, Equatorial Guinea, Eritrea, Fiji, Gabon, Gambia, Ghana, Grenada, Guatemala, Guinea, Guinea-Bissau, Guyana, Haiti, India, Indonesia, Iran, Iraq, Jamaica, Jordan, Kazakhstan, Kenya, Kiribati, Kyrgyz Republic, Lao, Lesotho, Liberia, Madagascar, Malawi, Mali, Mauritania, Micronesia, Fed. Sts., Mongolia, Morocco, Mozambique, Myanmar, Namibia, Nepal, Niger, Nigeria, Pakistan, Paraguay, Peru, Philippines, Russia, Rwanda, Samoa, Senegal, Sierra Leone, Solomon Islands, South Africa, Sri Lanka, St. Vincent and the Grenadines, Sudan, Suriname, Tajikistan, Tanzania, Timor-Leste, Togo, Tonga, Turkmenistan, Uganda, Uzbekistan, Vanuatu, Venezuela, Yemen, Zambia, \n",
+      "In cluster 1:\n",
+      "Albania, Antigua and Barbuda, Australia, Austria, Bahamas, Bahrain, Barbados, Belarus, Belgium, Bosnia and Herzegovina, Brazil, Brunei, Bulgaria, Canada, Chile, Colombia, Costa Rica, Croatia, Cyprus, Czech Republic, Denmark, Estonia, Finland, France, Georgia, Germany, Greece, Hungary, Iceland, Ireland, Israel, Italy, Japan, Kuwait, Latvia, Lebanon, Libya, Lithuania, Luxembourg, Macedonia, FYR, Malaysia, Maldives, Malta, Mauritius, Moldova, Montenegro, Netherlands, New Zealand, Norway, Oman, Panama, Poland, Portugal, Qatar, Romania, Saudi Arabia, Serbia, Seychelles, Singapore, Slovak Republic, Slovenia, South Korea, Spain, Sweden, Switzerland, Thailand, Tunisia, Turkey, Ukraine, United Arab Emirates, United Kingdom, United States, Uruguay, Vietnam, \n"
+     ]
+    }
+   ],
+   "source": [
+    "# See who is in what cluster\n",
+    "print(m_belong_to_k)\n",
+    "for i in range(K):\n",
+    "    print(f'In cluster {i}:')\n",
+    "    for j in range(len(m_belong_to_k)):\n",
+    "        if m_belong_to_k[j] == i:\n",
+    "            print(data_df.index[j], end=', ')\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "776096b4-d64a-4555-8e30-81d5bad109f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO --------\n",
+    "# check if this is correct, is cost supposed to stop decreasing that quickly?\n",
+    "# also apply more clusters and do elbow thing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "226f48ad-099b-48e1-89ec-cf3b00987340",
    "metadata": {},
    "outputs": [],
    "source": []
