--- a/cluster-country-data.ipynb
+++ b/cluster-country-data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "0319ba9c-1910-4533-84b2-618fbffcfd4a",
    "metadata": {},
    "outputs": [
@@ -220,7 +220,7 @@
        "[167 rows x 9 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "67e7c4b7-f007-4957-be86-4d8b20ae1178",
    "metadata": {},
    "outputs": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "fae3666d-13db-4f01-a4e6-c69f99a228ff",
    "metadata": {},
    "outputs": [],
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "id": "a621388f-d14c-4d5e-8b08-d9318e682647",
    "metadata": {},
    "outputs": [
@@ -318,41 +318,52 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cost at iteration 0: 11.926164245385014\n",
-      "Cost at iteration 1: 7.3379127205344705\n",
-      "Cost at iteration 2: 6.666848767416856\n",
-      "Cost at iteration 3: 6.465516347082324\n",
-      "Cost at iteration 4: 6.394691174309832\n",
-      "Cost at iteration 5: 6.377320782924625\n",
-      "Cost at iteration 6: 6.372385083772199\n",
-      "Cost at iteration 7: 6.370752533849225\n",
-      "Cost at iteration 8: 6.369095058958783\n",
-      "Cost at iteration 9: 6.368159042196286\n",
-      "Cost at iteration 10: 6.368159042196286\n",
-      "Cost at iteration 11: 6.368159042196286\n",
-      "Cost at iteration 12: 6.368159042196286\n",
-      "Cost at iteration 13: 6.368159042196286\n",
-      "Cost at iteration 14: 6.368159042196286\n"
+      "Cost at iteration 0: 7.543165481720137\n",
+      "Cost at iteration 1: 5.0768012120550114\n",
+      "Cost at iteration 2: 4.85380003472334\n",
+      "Cost at iteration 3: 4.666280918850804\n",
+      "Cost at iteration 4: 4.626698935314798\n",
+      "Cost at iteration 5: 4.617488112752445\n",
+      "Cost at iteration 6: 4.617488112752445\n",
+      "Cost at iteration 7: 4.617488112752445\n",
+      "Cost at iteration 8: 4.617488112752445\n",
+      "Cost at iteration 9: 4.617488112752445\n",
+      "Cost at iteration 10: 4.617488112752445\n",
+      "Cost at iteration 11: 4.617488112752445\n",
+      "Cost at iteration 12: 4.617488112752445\n",
+      "Cost at iteration 13: 4.617488112752445\n",
+      "Cost at iteration 14: 4.617488112752445\n",
+      "Cost at iteration 15: 4.617488112752445\n",
+      "Cost at iteration 16: 4.617488112752445\n",
+      "Cost at iteration 17: 4.617488112752445\n",
+      "Cost at iteration 18: 4.617488112752445\n",
+      "Cost at iteration 19: 4.617488112752445\n",
+      "Cost at iteration 20: 4.617488112752445\n",
+      "Cost at iteration 21: 4.617488112752445\n",
+      "Cost at iteration 22: 4.617488112752445\n",
+      "Cost at iteration 23: 4.617488112752445\n",
+      "Cost at iteration 24: 4.617488112752445\n",
+      "Cost at iteration 25: 4.617488112752445\n",
+      "Cost at iteration 26: 4.617488112752445\n",
+      "Cost at iteration 27: 4.617488112752445\n",
+      "Cost at iteration 28: 4.617488112752445\n",
+      "Cost at iteration 29: 4.617488112752445\n"
      ]
     }
    ],
    "source": [
-    "# Initially, let's cluster these using K=2 centroids\n",
-    "K = 2\n",
+    "K = 4 # number of clusters\n",
     "m = len(data)\n",
     "\n",
-    "# Pick 2 random samples to be our centroids\n",
+    "# Pick K random samples to be our centroids\n",
     "# note u_k is centroid k \n",
-    "u1 = data[random.choice(range(len(data)))]\n",
-    "u2 = data[random.choice(range(len(data)))]\n",
-    "\n",
-    "u = [u1, u2]\n",
+    "u = random.sample([i for i in data], K)\n",
     "\n",
     "x = data.copy()\n",
     "\n",
     "# K means   \n",
-    "for i in range(15):\n",
-    "    distances = [[],[]]\n",
+    "for i in range(30):\n",
+    "    distances = [[] for i in range(K)]\n",
     "    # for now we use euclidean distance\n",
     "    for centroid_index in range(K):\n",
     "        for row in x:\n",
@@ -383,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "id": "e0ad43f1-eff7-4c28-a46b-a0cf77eae617",
    "metadata": {},
    "outputs": [
@@ -391,11 +402,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 1, 0, 0, 1, 0, 0, 1, 1, 0, 1, 1, 0, 1, 1, 1, 0, 0, 0, 0, 1, 0, 1, 1, 1, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0, 0, 0, 1, 0, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 1, 0, 1, 1, 0, 0, 1, 1, 0, 1, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 1, 1, 1, 0, 1, 0, 0, 0, 0, 1, 0, 0, 1, 1, 0, 0, 1, 1, 1, 1, 0, 0, 1, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 0, 0, 0, 0, 1, 1, 0, 0, 1, 1, 0, 1, 0, 0, 0, 1, 1, 1, 1, 0, 0, 0, 1, 0, 1, 1, 0, 1, 1, 1, 0, 0, 1, 1, 0, 0, 0, 0, 1, 1, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 1, 0, 0]\n",
+      "[3, 1, 1, 3, 1, 1, 1, 2, 2, 1, 1, 2, 1, 1, 1, 2, 1, 3, 1, 1, 1, 1, 1, 2, 1, 3, 3, 1, 3, 2, 1, 3, 3, 1, 1, 1, 3, 3, 0, 1, 3, 1, 2, 2, 2, 1, 1, 1, 1, 0, 3, 1, 1, 2, 2, 0, 3, 1, 2, 3, 2, 1, 1, 3, 3, 1, 3, 1, 2, 1, 1, 1, 1, 2, 2, 2, 1, 2, 1, 1, 3, 3, 2, 1, 3, 1, 1, 3, 3, 1, 1, 2, 1, 3, 3, 1, 1, 3, 2, 3, 1, 1, 1, 0, 1, 1, 3, 1, 3, 1, 2, 2, 3, 0, 2, 1, 3, 1, 1, 1, 1, 1, 2, 2, 1, 1, 3, 1, 1, 3, 1, 1, 3, 2, 2, 2, 1, 3, 2, 2, 1, 1, 3, 1, 2, 2, 1, 3, 1, 3, 3, 1, 1, 1, 1, 3, 1, 2, 2, 2, 1, 1, 1, 0, 1, 0, 3]\n",
       "In cluster 0:\n",
-      "Afghanistan, Algeria, Angola, Argentina, Armenia, Azerbaijan, Bangladesh, Belize, Benin, Bhutan, Bolivia, Botswana, Burkina Faso, Burundi, Cambodia, Cameroon, Cape Verde, Central African Republic, Chad, China, Comoros, Congo, Dem. Rep., Congo, Rep., Cote d'Ivoire, Dominican Republic, Ecuador, Egypt, El Salvador, Equatorial Guinea, Eritrea, Fiji, Gabon, Gambia, Ghana, Grenada, Guatemala, Guinea, Guinea-Bissau, Guyana, Haiti, India, Indonesia, Iran, Iraq, Jamaica, Jordan, Kazakhstan, Kenya, Kiribati, Kyrgyz Republic, Lao, Lesotho, Liberia, Madagascar, Malawi, Mali, Mauritania, Micronesia, Fed. Sts., Mongolia, Morocco, Mozambique, Myanmar, Namibia, Nepal, Niger, Nigeria, Pakistan, Paraguay, Peru, Philippines, Russia, Rwanda, Samoa, Senegal, Sierra Leone, Solomon Islands, South Africa, Sri Lanka, St. Vincent and the Grenadines, Sudan, Suriname, Tajikistan, Tanzania, Timor-Leste, Togo, Tonga, Turkmenistan, Uganda, Uzbekistan, Vanuatu, Venezuela, Yemen, Zambia, \n",
+      "Congo, Rep., Equatorial Guinea, Gabon, Mongolia, Nigeria, Venezuela, Yemen, \n",
       "In cluster 1:\n",
-      "Albania, Antigua and Barbuda, Australia, Austria, Bahamas, Bahrain, Barbados, Belarus, Belgium, Bosnia and Herzegovina, Brazil, Brunei, Bulgaria, Canada, Chile, Colombia, Costa Rica, Croatia, Cyprus, Czech Republic, Denmark, Estonia, Finland, France, Georgia, Germany, Greece, Hungary, Iceland, Ireland, Israel, Italy, Japan, Kuwait, Latvia, Lebanon, Libya, Lithuania, Luxembourg, Macedonia, FYR, Malaysia, Maldives, Malta, Mauritius, Moldova, Montenegro, Netherlands, New Zealand, Norway, Oman, Panama, Poland, Portugal, Qatar, Romania, Saudi Arabia, Serbia, Seychelles, Singapore, Slovak Republic, Slovenia, South Korea, Spain, Sweden, Switzerland, Thailand, Tunisia, Turkey, Ukraine, United Arab Emirates, United Kingdom, United States, Uruguay, Vietnam, \n"
+      "Albania, Algeria, Antigua and Barbuda, Argentina, Armenia, Azerbaijan, Bahamas, Bangladesh, Barbados, Belarus, Belize, Bhutan, Bolivia, Bosnia and Herzegovina, Botswana, Brazil, Bulgaria, Cambodia, Cape Verde, Chile, China, Colombia, Costa Rica, Croatia, Dominican Republic, Ecuador, Egypt, El Salvador, Estonia, Fiji, Georgia, Grenada, Guatemala, Guyana, Hungary, India, Indonesia, Iran, Iraq, Jamaica, Jordan, Kazakhstan, Kyrgyz Republic, Latvia, Lebanon, Libya, Lithuania, Macedonia, FYR, Malaysia, Maldives, Mauritius, Micronesia, Fed. Sts., Moldova, Montenegro, Morocco, Myanmar, Nepal, Oman, Panama, Paraguay, Peru, Philippines, Poland, Romania, Russia, Samoa, Saudi Arabia, Serbia, Seychelles, Solomon Islands, Sri Lanka, St. Vincent and the Grenadines, Suriname, Tajikistan, Thailand, Tonga, Tunisia, Turkey, Turkmenistan, Ukraine, Uruguay, Uzbekistan, Vanuatu, Vietnam, \n",
+      "In cluster 2:\n",
+      "Australia, Austria, Bahrain, Belgium, Brunei, Canada, Cyprus, Czech Republic, Denmark, Finland, France, Germany, Greece, Iceland, Ireland, Israel, Italy, Japan, Kuwait, Luxembourg, Malta, Netherlands, New Zealand, Norway, Portugal, Qatar, Singapore, Slovak Republic, Slovenia, South Korea, Spain, Sweden, Switzerland, United Arab Emirates, United Kingdom, United States, \n",
+      "In cluster 3:\n",
+      "Afghanistan, Angola, Benin, Burkina Faso, Burundi, Cameroon, Central African Republic, Chad, Comoros, Congo, Dem. Rep., Cote d'Ivoire, Eritrea, Gambia, Ghana, Guinea, Guinea-Bissau, Haiti, Kenya, Kiribati, Lao, Lesotho, Liberia, Madagascar, Malawi, Mali, Mauritania, Mozambique, Namibia, Niger, Pakistan, Rwanda, Senegal, Sierra Leone, South Africa, Sudan, Tanzania, Timor-Leste, Togo, Uganda, Zambia, \n"
      ]
     }
    ],
