plot cost for different number of clusters k

--- a/cluster-country-data.ipynb
+++ b/cluster-country-data.ipynb
@@ -231,6 +231,7 @@
     "import random\n",
     "from math import sqrt\n",
     "from sklearn import preprocessing\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "scaler = preprocessing.StandardScaler()\n",
     "\n",
@@ -310,91 +311,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "a621388f-d14c-4d5e-8b08-d9318e682647",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Clustering function\n",
+    "# Returns tuple where index 0 is array mapping sample m to cluster k, index 1 is last cost\n",
+    "def k_means(K, debug=True):\n",
+    "    # K is number of clusters\n",
+    "    m = len(data)\n",
+    "    \n",
+    "    # Pick K random samples to be our centroids\n",
+    "    # note u_k is centroid k \n",
+    "    u = random.sample([i for i in data], K)\n",
+    "    \n",
+    "    x = data.copy()\n",
+    "    \n",
+    "    # K means   \n",
+    "    for i in range(15):\n",
+    "        distances = [[] for i in range(K)]\n",
+    "        # for now we use euclidean distance\n",
+    "        for centroid_index in range(K):\n",
+    "            for row in x:\n",
+    "                distances[centroid_index].append(sqrt(((row-u[centroid_index])**2).sum()))\n",
+    "    \n",
+    "        # find closest centroid for each data point\n",
+    "        m_belong_to_k = [] # data point at index m belongs to cluster k\n",
+    "        for j in range(m):\n",
+    "            min_centroid_index = 0\n",
+    "            for d in range(K):\n",
+    "                if distances[d][j] < distances[min_centroid_index][j]:\n",
+    "                    min_centroid_index = d\n",
+    "            m_belong_to_k.append(min_centroid_index)\n",
+    "    \n",
+    "        # calculate cost before moving\n",
+    "        last_cost = cost(u, x, m_belong_to_k)\n",
+    "        if debug: print(f'Cost at iteration {i}: {last_cost}')\n",
+    "    \n",
+    "        # move centroids by finding mean of assigned points\n",
+    "        for j in range(len(u)):\n",
+    "            u[j] = np.zeros_like(u[j])\n",
+    "            count = 0\n",
+    "            for ind_belong in range(len(m_belong_to_k)):\n",
+    "                if m_belong_to_k[ind_belong] == j:\n",
+    "                    count += 1\n",
+    "                    u[j] += x[ind_belong]\n",
+    "            u[j] = u[j] / count\n",
+    "\n",
+    "    return m_belong_to_k, last_cost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "7d546062-47ce-4337-aa9a-f374c5bd6344",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cost at iteration 0: 7.543165481720137\n",
-      "Cost at iteration 1: 5.0768012120550114\n",
-      "Cost at iteration 2: 4.85380003472334\n",
-      "Cost at iteration 3: 4.666280918850804\n",
-      "Cost at iteration 4: 4.626698935314798\n",
-      "Cost at iteration 5: 4.617488112752445\n",
-      "Cost at iteration 6: 4.617488112752445\n",
-      "Cost at iteration 7: 4.617488112752445\n",
-      "Cost at iteration 8: 4.617488112752445\n",
-      "Cost at iteration 9: 4.617488112752445\n",
-      "Cost at iteration 10: 4.617488112752445\n",
-      "Cost at iteration 11: 4.617488112752445\n",
-      "Cost at iteration 12: 4.617488112752445\n",
-      "Cost at iteration 13: 4.617488112752445\n",
-      "Cost at iteration 14: 4.617488112752445\n",
-      "Cost at iteration 15: 4.617488112752445\n",
-      "Cost at iteration 16: 4.617488112752445\n",
-      "Cost at iteration 17: 4.617488112752445\n",
-      "Cost at iteration 18: 4.617488112752445\n",
-      "Cost at iteration 19: 4.617488112752445\n",
-      "Cost at iteration 20: 4.617488112752445\n",
-      "Cost at iteration 21: 4.617488112752445\n",
-      "Cost at iteration 22: 4.617488112752445\n",
-      "Cost at iteration 23: 4.617488112752445\n",
-      "Cost at iteration 24: 4.617488112752445\n",
-      "Cost at iteration 25: 4.617488112752445\n",
-      "Cost at iteration 26: 4.617488112752445\n",
-      "Cost at iteration 27: 4.617488112752445\n",
-      "Cost at iteration 28: 4.617488112752445\n",
-      "Cost at iteration 29: 4.617488112752445\n"
+      "Cost at iteration 0: 6.665507990711402\n",
+      "Cost at iteration 1: 5.000583900366555\n",
+      "Cost at iteration 2: 4.810636830307232\n",
+      "Cost at iteration 3: 4.708780085973029\n",
+      "Cost at iteration 4: 4.6810510821052365\n",
+      "Cost at iteration 5: 4.677764398242455\n",
+      "Cost at iteration 6: 4.675210969730053\n",
+      "Cost at iteration 7: 4.675210969730053\n",
+      "Cost at iteration 8: 4.675210969730053\n",
+      "Cost at iteration 9: 4.675210969730053\n",
+      "Cost at iteration 10: 4.675210969730053\n",
+      "Cost at iteration 11: 4.675210969730053\n",
+      "Cost at iteration 12: 4.675210969730053\n",
+      "Cost at iteration 13: 4.675210969730053\n",
+      "Cost at iteration 14: 4.675210969730053\n"
      ]
     }
    ],
    "source": [
-    "K = 4 # number of clusters\n",
-    "m = len(data)\n",
-    "\n",
-    "# Pick K random samples to be our centroids\n",
-    "# note u_k is centroid k \n",
-    "u = random.sample([i for i in data], K)\n",
-    "\n",
-    "x = data.copy()\n",
-    "\n",
-    "# K means   \n",
-    "for i in range(30):\n",
-    "    distances = [[] for i in range(K)]\n",
-    "    # for now we use euclidean distance\n",
-    "    for centroid_index in range(K):\n",
-    "        for row in x:\n",
-    "            distances[centroid_index].append(sqrt(((row-u[centroid_index])**2).sum()))\n",
-    "\n",
-    "    # find closest centroid for each data point\n",
-    "    m_belong_to_k = [] # data point at index m belongs to cluster k\n",
-    "    for j in range(m):\n",
-    "        min_centroid_index = 0\n",
-    "        for d in range(K):\n",
-    "            if distances[d][j] < distances[min_centroid_index][j]:\n",
-    "                min_centroid_index = d\n",
-    "        m_belong_to_k.append(min_centroid_index)\n",
-    "\n",
-    "    # calculate cost before moving\n",
-    "    print(f'Cost at iteration {i}: {cost(u, x, m_belong_to_k)}')\n",
-    "\n",
-    "    # move centroids by finding mean of assigned points\n",
-    "    for j in range(len(u)):\n",
-    "        u[j] = np.zeros_like(u[j])\n",
-    "        count = 0\n",
-    "        for ind_belong in range(len(m_belong_to_k)):\n",
-    "            if m_belong_to_k[ind_belong] == j:\n",
-    "                count += 1\n",
-    "                u[j] += x[ind_belong]\n",
-    "        u[j] = u[j] / count"
+    "m_belong_to_k, lc = k_means(4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "e0ad43f1-eff7-4c28-a46b-a0cf77eae617",
    "metadata": {},
    "outputs": [
@@ -402,22 +404,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[3, 1, 1, 3, 1, 1, 1, 2, 2, 1, 1, 2, 1, 1, 1, 2, 1, 3, 1, 1, 1, 1, 1, 2, 1, 3, 3, 1, 3, 2, 1, 3, 3, 1, 1, 1, 3, 3, 0, 1, 3, 1, 2, 2, 2, 1, 1, 1, 1, 0, 3, 1, 1, 2, 2, 0, 3, 1, 2, 3, 2, 1, 1, 3, 3, 1, 3, 1, 2, 1, 1, 1, 1, 2, 2, 2, 1, 2, 1, 1, 3, 3, 2, 1, 3, 1, 1, 3, 3, 1, 1, 2, 1, 3, 3, 1, 1, 3, 2, 3, 1, 1, 1, 0, 1, 1, 3, 1, 3, 1, 2, 2, 3, 0, 2, 1, 3, 1, 1, 1, 1, 1, 2, 2, 1, 1, 3, 1, 1, 3, 1, 1, 3, 2, 2, 2, 1, 3, 2, 2, 1, 1, 3, 1, 2, 2, 1, 3, 1, 3, 3, 1, 1, 1, 1, 3, 1, 2, 2, 2, 1, 1, 1, 0, 1, 0, 3]\n",
+      "[0, 2, 2, 3, 2, 2, 2, 1, 1, 2, 2, 1, 2, 2, 2, 1, 2, 3, 2, 2, 2, 0, 2, 1, 2, 3, 0, 2, 3, 1, 2, 3, 3, 2, 2, 2, 3, 3, 3, 2, 3, 2, 1, 1, 1, 2, 2, 2, 2, 3, 3, 2, 2, 1, 1, 3, 3, 2, 1, 3, 1, 2, 2, 3, 0, 2, 0, 2, 1, 2, 2, 2, 2, 1, 1, 1, 2, 1, 2, 2, 3, 0, 1, 2, 3, 2, 2, 0, 0, 2, 2, 1, 2, 3, 3, 2, 2, 3, 1, 3, 2, 0, 2, 2, 2, 2, 3, 3, 0, 2, 1, 1, 3, 3, 1, 2, 3, 2, 2, 2, 2, 2, 1, 1, 2, 2, 0, 2, 2, 3, 2, 2, 0, 1, 1, 1, 0, 0, 1, 1, 2, 2, 3, 2, 1, 1, 2, 3, 2, 3, 0, 2, 2, 2, 2, 0, 2, 1, 1, 1, 2, 2, 2, 2, 2, 3, 3]\n",
       "In cluster 0:\n",
-      "Congo, Rep., Equatorial Guinea, Gabon, Mongolia, Nigeria, Venezuela, Yemen, \n",
+      "Afghanistan, Botswana, Burundi, Guinea-Bissau, Haiti, Kiribati, Lesotho, Liberia, Micronesia, Fed. Sts., Namibia, Rwanda, Sierra Leone, Solomon Islands, South Africa, Togo, Uganda, \n",
       "In cluster 1:\n",
-      "Albania, Algeria, Antigua and Barbuda, Argentina, Armenia, Azerbaijan, Bahamas, Bangladesh, Barbados, Belarus, Belize, Bhutan, Bolivia, Bosnia and Herzegovina, Botswana, Brazil, Bulgaria, Cambodia, Cape Verde, Chile, China, Colombia, Costa Rica, Croatia, Dominican Republic, Ecuador, Egypt, El Salvador, Estonia, Fiji, Georgia, Grenada, Guatemala, Guyana, Hungary, India, Indonesia, Iran, Iraq, Jamaica, Jordan, Kazakhstan, Kyrgyz Republic, Latvia, Lebanon, Libya, Lithuania, Macedonia, FYR, Malaysia, Maldives, Mauritius, Micronesia, Fed. Sts., Moldova, Montenegro, Morocco, Myanmar, Nepal, Oman, Panama, Paraguay, Peru, Philippines, Poland, Romania, Russia, Samoa, Saudi Arabia, Serbia, Seychelles, Solomon Islands, Sri Lanka, St. Vincent and the Grenadines, Suriname, Tajikistan, Thailand, Tonga, Tunisia, Turkey, Turkmenistan, Ukraine, Uruguay, Uzbekistan, Vanuatu, Vietnam, \n",
-      "In cluster 2:\n",
       "Australia, Austria, Bahrain, Belgium, Brunei, Canada, Cyprus, Czech Republic, Denmark, Finland, France, Germany, Greece, Iceland, Ireland, Israel, Italy, Japan, Kuwait, Luxembourg, Malta, Netherlands, New Zealand, Norway, Portugal, Qatar, Singapore, Slovak Republic, Slovenia, South Korea, Spain, Sweden, Switzerland, United Arab Emirates, United Kingdom, United States, \n",
+      "In cluster 2:\n",
+      "Albania, Algeria, Antigua and Barbuda, Argentina, Armenia, Azerbaijan, Bahamas, Bangladesh, Barbados, Belarus, Belize, Bhutan, Bolivia, Bosnia and Herzegovina, Brazil, Bulgaria, Cambodia, Cape Verde, Chile, China, Colombia, Costa Rica, Croatia, Dominican Republic, Ecuador, Egypt, El Salvador, Estonia, Fiji, Georgia, Grenada, Guatemala, Guyana, Hungary, India, Indonesia, Iran, Iraq, Jamaica, Jordan, Kazakhstan, Kyrgyz Republic, Latvia, Lebanon, Libya, Lithuania, Macedonia, FYR, Malaysia, Maldives, Mauritius, Moldova, Mongolia, Montenegro, Morocco, Nepal, Oman, Panama, Paraguay, Peru, Philippines, Poland, Romania, Russia, Samoa, Saudi Arabia, Serbia, Seychelles, Sri Lanka, St. Vincent and the Grenadines, Suriname, Tajikistan, Thailand, Tonga, Tunisia, Turkey, Turkmenistan, Ukraine, Uruguay, Uzbekistan, Vanuatu, Venezuela, Vietnam, \n",
       "In cluster 3:\n",
-      "Afghanistan, Angola, Benin, Burkina Faso, Burundi, Cameroon, Central African Republic, Chad, Comoros, Congo, Dem. Rep., Cote d'Ivoire, Eritrea, Gambia, Ghana, Guinea, Guinea-Bissau, Haiti, Kenya, Kiribati, Lao, Lesotho, Liberia, Madagascar, Malawi, Mali, Mauritania, Mozambique, Namibia, Niger, Pakistan, Rwanda, Senegal, Sierra Leone, South Africa, Sudan, Tanzania, Timor-Leste, Togo, Uganda, Zambia, \n"
+      "Angola, Benin, Burkina Faso, Cameroon, Central African Republic, Chad, Comoros, Congo, Dem. Rep., Congo, Rep., Cote d'Ivoire, Equatorial Guinea, Eritrea, Gabon, Gambia, Ghana, Guinea, Kenya, Lao, Madagascar, Malawi, Mali, Mauritania, Mozambique, Myanmar, Niger, Nigeria, Pakistan, Senegal, Sudan, Tanzania, Timor-Leste, Yemen, Zambia, \n"
      ]
     }
    ],
    "source": [
     "# See who is in what cluster\n",
     "print(m_belong_to_k)\n",
-    "for i in range(K):\n",
+    "for i in range(4):\n",
     "    print(f'In cluster {i}:')\n",
     "    for j in range(len(m_belong_to_k)):\n",
     "        if m_belong_to_k[j] == i:\n",
@@ -427,20 +429,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "776096b4-d64a-4555-8e30-81d5bad109f0",
+   "execution_count": null,
+   "id": "226f48ad-099b-48e1-89ec-cf3b00987340",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO --------\n",
-    "# check if this is correct, is cost supposed to stop decreasing that quickly?\n",
-    "# also apply more clusters and do elbow thing"
+    "# Now let's plot cost for runs with different values of K starting at K=2\n",
+    "max_k = 30\n",
+    "cost_list = []\n",
+    "for k in range(2, max_k):\n",
+    "    m_belong_to_k, last_cost = k_means(k, debug=False)\n",
+    "    cost_list.append(last_cost)\n",
+    "\n",
+    "plt.xlabel('Number of clusters (K)')\n",
+    "plt.ylabel('Cost')\n",
+    "plt.plot(list(range(2,max_k)), cost_list)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "226f48ad-099b-48e1-89ec-cf3b00987340",
+   "id": "f30e8a75-acdd-441e-8db2-2d32ca5fa711",
    "metadata": {},
    "outputs": [],
    "source": []
