more processing and autoencoder architecture

--- a/intrusion-detection/autoencoder-anomaly.ipynb
+++ b/intrusion-detection/autoencoder-anomaly.ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "ea12ae78-7fd6-4bf6-a1a4-e80abfcde8e8",
    "metadata": {},
    "outputs": [
@@ -174,12 +174,17 @@
     "            train_data_df = train_data_df[train_data_df[columns[i]] <= std*6]\n",
     "        \n",
     "# investigate by plotting our samples\n",
-    "#plt.scatter(np.linspace(0, 100000, len(train_data_df['duration'])), train_data_df['duration'], s=1)"
+    "#plt.scatter(np.linspace(0, 100000, len(train_data_df['duration'])), train_data_df['duration'], s=1)\n",
+    "\n",
+    "# maybe log transform some of the fields that have 0 or large values\n",
+    "train_data_df['duration'] = np.log(train_data_df['duration']+0.001)\n",
+    "train_data_df['src_bytes'] = np.log(train_data_df['src_bytes']+0.001)\n",
+    "train_data_df['dst_bytes'] = np.log(train_data_df['dst_bytes']+0.001)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "ef652808-3d58-4b05-ac00-519272cd7bce",
    "metadata": {},
    "outputs": [
@@ -197,18 +202,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "8c46afc5-b23f-476d-95f4-e702d5ca571d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(65162, 122)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# normalize\n",
-    "scaler.fit_transform(train_data_df)[0]"
+    "data = scaler.fit_transform(train_data_df)\n",
+    "data.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "641b598d-772a-459a-82f6-418476542228",
    "metadata": {},
    "outputs": [],
@@ -217,13 +234,73 @@
     "# source for architecture: https://pmc.ncbi.nlm.nih.gov/articles/PMC8272075/pdf/sensors-21-04294.pdf\n",
     "# Apparently, it looks like different depth and hidden layer neuron numbers achieve very similar results on this dataset\n",
     "# We'll go for a symmetric autoencoder with depth of 5 with 64 neurons on the first hidden layer (subsequent layers divide number of neurons by 2)\n",
-    "# Paper states latent space size of 3 works best with this setup\n",
     "class Autoencoder(torch.nn.Module):\n",
-    "    def __init__(self):\n",
+    "    def __init__(self, input_dim, latent_dim):\n",
     "        super().__init__()\n",
+    "        self.encoder = torch.nn.Sequential(\n",
+    "            torch.nn.Linear(input_dim, 64),\n",
+    "            torch.nn.ReLU(),\n",
+    "            torch.nn.Linear(64, 32),\n",
+    "            torch.nn.ReLU(),\n",
+    "            torch.nn.Linear(32, latent_dim),\n",
+    "            # torch.nn.ReLU() MAYBE?\n",
+    "        )\n",
     "\n",
-    "        "
+    "        self.decoder = torch.nn.Sequential(\n",
+    "            torch.nn.Linear(latent_dim, 32),\n",
+    "            torch.nn.ReLU(),\n",
+    "            torch.nn.Linear(32, 64),\n",
+    "            torch.nn.ReLU(),\n",
+    "            torch.nn.Linear(64, input_dim),\n",
+    "            torch.nn.Sigmoid()\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        return self.decoder(self.encoder(x))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "db2ad599-73aa-4bc0-afb4-a6898efec57c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.5121, 0.4626, 0.4720, 0.5340, 0.4542, 0.4727, 0.4755, 0.4666, 0.5350,\n",
+       "        0.5373, 0.4960, 0.5084, 0.5191, 0.4951, 0.5448, 0.5674, 0.5186, 0.4893,\n",
+       "        0.4677, 0.4663, 0.5431, 0.5050, 0.4585, 0.5016, 0.4916, 0.4560, 0.5265,\n",
+       "        0.4868, 0.5285, 0.5040, 0.5436, 0.5016, 0.4953, 0.5133, 0.4617, 0.5343,\n",
+       "        0.5017, 0.4994, 0.4599, 0.5280, 0.4831, 0.4723, 0.4829, 0.4633, 0.4612,\n",
+       "        0.4808, 0.4948, 0.4489, 0.4599, 0.4908, 0.5101, 0.4962, 0.4734, 0.5055,\n",
+       "        0.5069, 0.5067, 0.5068, 0.5057, 0.4919, 0.4904, 0.5016, 0.5162, 0.5244,\n",
+       "        0.4988, 0.4849, 0.4495, 0.4814, 0.4917, 0.5354, 0.5167, 0.4880, 0.4826,\n",
+       "        0.5295, 0.4465, 0.4943, 0.5219, 0.5291, 0.5014, 0.4618, 0.5002, 0.5109,\n",
+       "        0.4402, 0.4630, 0.4857, 0.5010, 0.5176, 0.5168, 0.4984, 0.4886, 0.4819,\n",
+       "        0.5289, 0.5505, 0.4936, 0.4985, 0.4611, 0.4874, 0.5482, 0.4771, 0.4716,\n",
+       "        0.4840, 0.5507, 0.5419, 0.5079, 0.5142, 0.5125, 0.5064, 0.5307, 0.5388,\n",
+       "        0.4718, 0.5283, 0.4889, 0.4906, 0.4833, 0.5565, 0.5271, 0.4889, 0.5142,\n",
+       "        0.5201, 0.5612, 0.5207, 0.5524, 0.5307], grad_fn=<SigmoidBackward0>)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = Autoencoder(data.shape[1], 3)\n",
+    "model.forward(torch.from_numpy(data[0]).float())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82535d41-0d19-4a09-a94e-2723b230475b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
