data processing setup for LSTM IDS

--- a/recurrent-network/character-level-classifier.ipynb
+++ b/recurrent-network/character-level-classifier.ipynb
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "ca7e2116-7378-49e0-b690-82d313428017",
    "metadata": {},
    "outputs": [
@@ -4358,7 +4358,8 @@
       "Prediction: Italian => Label is Italian\n",
       "Prediction: English => Label is English\n",
       "Prediction: English => Label is English\n",
-      "Prediction: English => Label is English\n"
+      "Prediction: English => Label is English\n",
+      "Accuracy over all classes: 0.80\n"
      ]
     }
    ],
@@ -4366,6 +4367,7 @@
     "# evaluate performance\n",
     "rnn.eval()\n",
     "\n",
+    "# TODO: accuracy by label\n",
     "correct = 0\n",
     "for s in test_dataset:\n",
     "    data, label_tensor, value, label_text = s\n",
@@ -4373,6 +4375,10 @@
     "    out = rnn.forward(data)\n",
     "    predict = all_classes[out[0].argmax()]\n",
     "    print(f'Prediction: {predict} => Label is {label_text}')\n",
+    "\n",
+    "    if predict == label_text: correct += 1\n",
+    "\n",
+    "print(f'Accuracy over all classes: {correct/len(test_dataset):.2f}')\n",
     "    "
    ]
   },
